--- a/package.json
+++ b/package.json
@@ -6,17 +6,33 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
+    "@apollo/client": "^3.5.10",
+    "@mantine/core": "^4.0.7",
+    "@mantine/hooks": "^4.0.7",
+    "@mantine/next": "^4.0.7",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.4",
+    "daisyui": "^2.11.1",
+    "graphql": "^16.3.0",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@types/jest": "^27.4.1",
+    "@types/node": "^17.0.22",
     "@types/react": "17.0.41",
+    "autoprefixer": "^10.4.4",
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0",
+    "jest": "^27.5.1",
+    "postcss": "^8.4.12",
+    "tailwindcss": "^3.0.23",
+    "ts-jest": "^27.1.3",
     "typescript": "4.6.2"
   }
 }
